--- a/spunimusic/static/css/base.css
+++ b/spunimusic/static/css/base.css
@@ -4,9 +4,12 @@ body, html {
     font-family: 'Oswald', sans-serif;
 }
 
+.hover:hover{
+	background-color:blue;
+}
 
 #search-bar {
-    max-width: 400px;
+    max-width: 600px;
     width: 100%;
 }
 
@@ -27,6 +30,7 @@ body, html {
 .song-bar{
 	background-color:#212529;
 	margin-bottom:15px;
+	border-radius:5px;
 }
 
 .global-text, .global-subtext {
