--- a/spunimusic/templates/index.html
+++ b/spunimusic/templates/index.html
@@ -28,7 +28,7 @@
             {% for song in songs %}
                 <div class="row song-bar" >
                     <div class="row-format">
-                        <a class="hover" href="{% url 'spuni:show_song' song.slug %}" >
+                        <a href="{% url 'spuni:show_song' song.slug %}" >
                             <img class="song-image float-left"  src={{song.albumArt}}>
 							<p class="song-text"><strong>Song:</strong> {{song.name}}<br><strong>Artist:</strong> {{song.artist}}<br><strong>Likes:</strong> {{song.upvotes}}</p>
                         </a>
