--- a/spunimusic/templates/profile.html
+++ b/spunimusic/templates/profile.html
@@ -9,7 +9,11 @@
     {% else %}
         <div class="row">
             <img id="profile-photo" class="float-left profile-identity" src="{{ user.photo }}" alt="{{ username }}'s profile picture" />
-            <h1 class="float-right profile-identity">{{ username }}</h1>
+            {% if username %}
+                <h1 class="float-right profile-identity">{{ username }} <br><a href="{% url 'spuni:edit_profile'%}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Edit</a></h1>
+            {% else %}
+                <h1 class="float-right profile-identity">{{ username }}</h1>
+            {% endif %}
         </div>
         <hr>
         {% if songs %}
