--- a/spunimusic/templates/base.html
+++ b/spunimusic/templates/base.html
@@ -17,7 +17,7 @@
 
         <!-- Bootstrap. -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <!-- Notifications -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js" type="text/javascript"></script>
 
@@ -53,7 +53,6 @@
 					<li class="nav-item ">
 						<a class="nav-link" href="#">About us</a>
 					</li>
-			
 				</ul>
 				<div class="form-inline my-2 my-lg-0">
 					<!-- Search Bar -->
