--- a/spunimusic/static/css/base.css
+++ b/spunimusic/static/css/base.css
@@ -23,6 +23,10 @@ body, html {
     padding: 30px;
 }
 
+.song-bar{
+	border-radius:5px;
+}
+
 .global-text, .global-subtext {
     color: white;
 }
@@ -30,16 +34,20 @@ body, html {
 .global-text {
     font-weight: bold;
     font-size: 70px;
+	text-shadow: 5px 5px black;
 }
 
 .global-subtext {
-    font-size: 50px;
+    font-size: 40px;
+	color: #d9d9d9;
 }
 
 #profile-photo {
     max-height: 300px;
     max-width: 300px;
 }
+
+
 
 .song-image {
     max-height: 150px;
@@ -55,8 +63,10 @@ body, html {
 
 .song-text {
     margin-left: 2%;
-    font-size: xx-large;
+    font-size: x-large;
+	line-height:45px;
     float: left;
+	color:#d9d9d9;
 }
 
 #upvote, #downvote {
