--- a/spunimusic/templates/base.html
+++ b/spunimusic/templates/base.html
@@ -45,13 +45,13 @@
 				
 				<ul class="navbar-nav mr-auto" id="navbarSupportedContent">
 					<li class="nav-item">
-						<a class="nav-link " href="#">Home</a>
+						<a class="nav-link" href="{% url 'spuni:index'%}">Home</a>
 					</li>
 					<li class="nav-item ">
 						<a class="nav-link" href="#">Users</a>
 					</li>
 					<li class="nav-item ">
-						<a class="nav-link" href="#">About us</a>
+						<a class="nav-link" href="{% url 'spuni:about'%}">About us</a>
 					</li>
 				</ul>
 				<div class="form-inline my-2 my-lg-0">
