--- a/spunimusic/templates/users.html
+++ b/spunimusic/templates/users.html
@@ -5,9 +5,13 @@
 {% block body_block %}
 
 <ul>
-    <!-- Do not use "user", as this is the request.user value -->
+    <!-- Do not use "user", as this is the
+        request.user value.
+        Do u.user to access username, and
+        u.photo to access photo -->
     {% for u in user_list %}
         <li>{{ u.user.username }}</li>
+    {% endfor %}
 </ul>
 
 {% endblock %}
