updated upvote sprites and added text wrap for long song and artist names

--- a/spunimusic/static/css/base.css
+++ b/spunimusic/static/css/base.css
@@ -131,3 +131,11 @@ body, html {
 .para-box{
 	padding:20px;
 }
+
+.text-wrap > p{
+	white-space: nowrap; 
+	width: 400px; 
+	overflow: hidden;
+	text-overflow: ellipsis; 
+	
+}
