--- a/spunimusic/templates/index.html
+++ b/spunimusic/templates/index.html
@@ -27,7 +27,7 @@
         {% else %}
             {% for song in songs %}
                 <div class="row space-top">
-                    <div class="col-md-12 song-bar bg-dark">
+                    <div class="col-md-12 song-bar bg-dark text-wrap">
                         <a href="{% url 'spuni:show_song' song.slug %}">
                             <img class="song-image float-left" src={{song.albumArt}}>
                         </a>
