--- a/spunimusic/templates/base.html
+++ b/spunimusic/templates/base.html
@@ -48,7 +48,7 @@
 						<a class="nav-link" href="{% url 'spuni:index'%}">Home</a>
 					</li>
 					<li class="nav-item ">
-						<a class="nav-link" href="#">Users</a>
+						<a class="nav-link" href="{% url 'spuni:show_user_list'%}">Users</a>
 					</li>
 					<li class="nav-item ">
 						<a class="nav-link" href="{% url 'spuni:about'%}">About us</a>
